[package]
name = "whoisthere"
version = "0.0.1"
edition = "2021"
authors = ["Yi Cao <me@ycao.top>"]
publish = false
license = "BSD-3"

[dependencies]
pnet = "0.34"

structopt = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rouille = "3.6.2"

# WHY RUST WHY NO EITHER<L, R> WHY WHY WHY???
either = "1.11"
